# quality-check

./: .envrc  .gitignore  README.md  flake.nix  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
src/file_index/: base.py  bids.py  utils.py
src/quality_control/: logging.py  utils.py
src/quality_control/autoencoder/: base.py  cli.py  discriminator.py  evaluate.py  loss.py  model.py  train.py  validate.py
src/quality_control/cli/: ingest.py
src/quality_control/data/: augmentation.py  cli.py  compression.py  datamodule.py  dataset.py  schema.py
src/quality_control/diffusion/: cli.py  evaluate.py  model.py  train.py  validate.py
src/quality_control/ingest/: base.py  bold_conf.py  cli.py  segmentation.py  skull_strip.py
src/quality_control/model/: cli.py  evaluate.py  train.py  unet.py
src/quality_control/reports/: base.py  bold_conf.py  norm.py  segmentation.py  skull_strip.py  tsnr.py
