[project]
name = "machine-learning"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ingest = "quality_control.ingest.cli:main"

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
machine-learning = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "*"
pandas = "*"
scipy = "*"
tqdm = "*"
cairosvg = "*"
pillow = "*"
types-pillow = "*"
diffusers = "*"
safetensors = "*"
pytorch = "*"
torchvision = "*"
jax = "*"
jaxtyping = "*"
jaxlib = "*"
etils = "*"
chex = "*"
flax = "*"
numpyro = "*"
zstandard = "*"
sqlite = ">=3.46.0"

[tool.pixi.feature.gpu]
platforms = ["linux-64", "osx-64"]
system-requirements = { cuda = "12" }

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.*"
pytorch = { version = "*", build = "*cuda*" }

[tool.pixi.feature.notebooks.dependencies]
jupyterlab = "*"
mypy = "*"
ruff = "*"

[tool.pixi.environments]
default = { features = ["gpu", "notebooks"], solve-group = "default" }
