[project]
name = "machine-learning"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ingest = "quality_control.ingest.cli:main"

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.pypi-dependencies]
machine-learning = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cuda-version = "12.*"

numpy = "*"
pandas = "*"
scipy = "*"
tqdm = "*"
cairosvg = "*"
types-pillow = "*"

accelerate = "*"
diffusers = "*"
safetensors = "*"
transformers = "*"

pytorch = { channel = "pytorch", version = "*", build = "*cuda*" }
torchvision = { channel = "pytorch", version = "*" }
torchtriton = { channel = "pytorch", version = "*" }

lightning = "*"
optuna = "*"
tensorboard = "*"

zstandard = "*"
sqlite = ">=3.46.0"

[tool.pixi.feature.notebooks.dependencies]
jupyterlab = "*"
ipywidgets = "*"
mypy = "*"
ruff = "*"

[tool.pixi.environments]
default = { features = ["notebooks"], solve-group = "default" }
