[project]
name = "machine-learning"
dynamic = ["version"]
requires-python = "==3.12"
dependencies = []

[project.scripts]
ingest = "quality_control.ingest.cli:main"

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.pixi.project]
channels = ["https://repo.prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
linux = "4.18"
cuda = "12"

[tool.pixi.tasks]
post-install = "pip install 'transformer_engine[pytorch]'"

[tool.pixi.pypi-dependencies]
machine-learning = { path = ".", editable = true }

[tool.pixi.dependencies]
pip = "*"

matplotlib = "*"
numpy = "*"
pandas = "*"
scipy = "*"
tqdm = "*"
cairosvg = "*"
types-pillow = "*"

psycopg2 = "*"
sqlite = ">=3.46.0"
zstandard = "*"

# huggingface
accelerate = "*"
diffusers = "*"
safetensors = "*"
transformers = "*"

# pytorch
pytorch = { version = "*", build = "*cuda*" }
botorch = "*"
fvcore = "*"
iopath = "*"
torchvision = "*"
triton = "*"
c-compiler = "*"
cxx-compiler = "*"

# nvidia
cuda-version = "12.6"
cuda-nvrtc-dev = "*"
cuda-nvtx-dev = "*"
libcublas-dev = "*"
libcusolver-dev = "*"
libcusparse-dev = "*"

bitsandbytes = "*"
deepspeed = "*"
lightning = "*"
optuna = "*"
optuna-integration = "*"
tensorboard = "*"
torchmetrics = "*"

[tool.pixi.feature.development.dependencies]
jupyterlab = "*"
ipywidgets = "*"
mypy = "*"
ruff = "*"

[tool.pixi.environments]
default = { features = ["development"], solve-group = "default" }
